[gd_scene load_steps=8 format=2]

[ext_resource path="res://dogica.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Enemics/medalla2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemics/medalla3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemics/medalla.png" type="Texture" id=4]
[ext_resource path="res://Pantalla_final.gd" type="Script" id=5]
[ext_resource path="res://Sprites/FInal.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Pantalla final" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 504, 264 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 6 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 384, 288 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 624, 288 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 504, 408 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 72.0
margin_top = 48.0
margin_right = 248.0
margin_bottom = 62.0
rect_scale = Vector2( 5.23493, 5.53286 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Has mort"
align = 1
valign = 1
